@@ -1,5 +1,5 @@
 /****************************************************************************
- * lib/stdio/lib_asprintf.c
+ * lib/stdio/lib_avsprintf.c
  *
  *   Copyright (C) 2011-2012 Gregory Nutt. All rights reserved.
  *   Author: Gregory Nutt <gnutt@nuttx.org>
@@ -38,7 +38,11 @@
  ****************************************************************************/
 
 #include <stdio.h>
+#include <stdlib.h>
 #include <stdarg.h>
+#include <assert.h>
+
+#include "lib_internal.h"
 
 /****************************************************************************
  * Pre-processor Definitions
@@ -73,14 +77,14 @@
  ****************************************************************************/
 
 /****************************************************************************
- * Name: asprintf
+ * Name: avsprintf
  *
  * Description:
- *   This function is similar to sprintf, except that it dynamically
+ *   This function is similar to vsprintf, except that it dynamically
  *   allocates a string (as with malloc) to hold the output, instead of
  *   putting the output in a buffer you allocate in advance.  The ptr
  *   argument should be the address of a char * object, and a successful
- *   call to asprintf stores a pointer to the newly allocated string at that
+ *   call to avsprintf stores a pointer to the newly allocated string at that
  *   location.
  *
  * Returned Value:
@@ -90,16 +94,53 @@
  *
  ****************************************************************************/
 
-int asprintf (FAR char **ptr, const char *fmt, ...)
+int avsprintf(FAR char **ptr, const char *fmt, va_list ap)
 {
-  va_list ap;
-  int ret;
+  struct lib_outstream_s nulloutstream;
+  struct lib_memoutstream_s memoutstream;
+  FAR char *buf;
+  int nbytes;
 
-  /* Let avsprintf do all of the work */
+  DEBUGASSERT(ptr && fmt);
 
-  va_start(ap, fmt);
-  ret = avsprintf(ptr, fmt, ap);
-  va_end(ap);
+  /* First, use a nullstream to get the size of the buffer.  The number
+   * of bytes returned may or may not include the null terminator.
+   */
+  
+  lib_nulloutstream(&nulloutstream);
+  nbytes = lib_vsprintf((FAR struct lib_outstream_s *)&nulloutstream, fmt, ap);
 
-  return ret;
+  /* Then allocate a buffer to hold that number of characters, adding one
+   * for the null terminator.
+   */
+
+  buf = (FAR char *)malloc(nulloutstream.nput + 1);
+  if (!buf)
+    {
+      return ERROR;
+    }
+
+  /* Initialize a memory stream to write into the allocated buffer.  The
+   * memory stream will reserve one byte at the end of the buffer for the
+   * null terminator and will not report this in the number of output bytes.
+   */
+
+  lib_memoutstream((FAR struct lib_memoutstream_s *)&memoutstream,
+                   buf, nulloutstream.nput + 1);
+
+  /* Then let lib_vsprintf do it's real thing */
+
+  nbytes = lib_vsprintf((FAR struct lib_outstream_s *)&memoutstream.public, fmt, ap);
+
+  /* Return a pointer to the string to the caller.  NOTE: the memstream put()
+   * method has already added the NUL terminator to the end of the string (not
+   * included in the nput count).
+   *
+   * Hmmm.. looks like the memory would be stranded if lib_vsprintf() returned
+   * an error.  Does that ever happen?
+   */
+
+  DEBUGASSERT(nbytes < 0 || nbytes == nulloutstream.nput);
+  *ptr = buf;
+  return nbytes;
 }
